--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             - Lean community Zulip
           </td>
           <td class="col-hours">5–7</td>
-          <td class="col-completed"><input type="checkbox"></td>
+          <td class="col-completed"><input type="checkbox" checked></td>
           <td></td>
         </tr>
 
